--- a/frontend/src/app/exames/components/exames/exames.component.scss
+++ b/frontend/src/app/exames/components/exames/exames.component.scss
@@ -103,3 +103,11 @@
     overflow: hidden;
     text-align: center;
   }
+
+  .celulaContent2 {
+    font: size 3rem;
+    width: 20%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    text-align: center;
+  }
