Corrigir campos de Salas no formulário - BASIS-227321

--- a/frontend/src/app/exames/components/formulario-salas/formulario-salas.component.html
+++ b/frontend/src/app/exames/components/formulario-salas/formulario-salas.component.html
@@ -8,7 +8,7 @@
                         <label for="name">Indentificação da Sala</label>
                         <span class="md-inputfield p-float-label">
                             <input type="text" pInputText class="p-inputtext" 
-                            [(ngModel)]="identificacaoDaSala"/>
+                            [(ngModel)]="nome"/>
                         </span>
                     </div>
                     <app-unidade-funcional class="p-md-4" #unidadeFuncional></app-unidade-funcional>
@@ -18,7 +18,7 @@
                         <label for="name">Localização da Sala</label>
                         <span class="md-inputfield p-float-label">
                             <input type="text" pInputText class="p-inputtext" 
-                            [(ngModel)]="locacaoDaSala"/>
+                            [(ngModel)]="locacao"/>
                         </span>
                     </div>
                     <div class="p-md-5 p-col-12">
