Atualizar formulario de grade - BASIS-227321

--- a/frontend/src/app/exames/components/grade-agendamentos/grade-agendamentos.component.html
+++ b/frontend/src/app/exames/components/grade-agendamentos/grade-agendamentos.component.html
@@ -4,7 +4,7 @@
     </h1>
     <p-tabView>
         <p-tabPanel header="Grade de Agendamento">
-            <app-formulario-grade-de-agendamento [grade]="grade" (gradeSalva)="onGradeSalva($event)"></app-formulario-grade-de-agendamento>
+            <app-formulario-grade-de-agendamento></app-formulario-grade-de-agendamento>
         </p-tabPanel>
 
         <p-tabPanel header="Horários Agendados">
