--- a/frontend/src/app/exames/components/formulario-grade-de-agendamento/formulario-grade-de-agendamento.component.html
+++ b/frontend/src/app/exames/components/formulario-grade-de-agendamento/formulario-grade-de-agendamento.component.html
@@ -1,53 +1,85 @@
 <div class="p-col-12 p-grid">
-            
-    <div class="p-md-2 p-fluid" [formGroup]="cadastroGrade">
-        Unidade executora
-        <span class="md-inputfield p-float-label" style="margin-top: 5px;">
-            <p-dropdown [options]="unidadesExecutoras" [optionLabel]="'nome'" [optionValue]="'id'" [filter]="true"
-                [resetFilterOnHide]="true" [showClear]="true" placeholder="Selecione"
-                formControlName="unidadeExecutoraId">
-            </p-dropdown>
+
+    <div class="p-md-2 p-fluid">
+        Data inicial
+        <p-calendar inputId="dataInicial" dateFormat="dd/mm/yy" [monthNavigator]="true" [yearNavigator]="true"
+            yearRange="2021:2030" [defaultDate]="" [(ngModel)]="dataInicio" [minDate]="dataMinima" [maxDate]="dataFim">
+        </p-calendar>
+    </div>
+
+    <div class="p-md-2 p-fluid">
+        Data final
+        <p-calendar inputId="dataFinal" dateFormat="dd/mm/yy" [monthNavigator]="true" [yearNavigator]="true"
+            yearRange="2021:2030" [defaultDate]="" [(ngModel)]="dataFim" [minDate]="dataInicio">
+        </p-calendar>
+    </div>
+
+    <div class="p-md-2 p-fluid sm-top-margin">
+        Horário início
+        <p-calendar [(ngModel)]="horaInicio" [timeOnly]="true" [stepMinute]="5" inputId="horarioInicio"
+            [defaultDate]="horaPadrao">
+        </p-calendar>
+    </div>
+
+    <div class="p-md-2 p-fluid sm-top-margin">
+        Horário fim
+        <p-calendar [(ngModel)]="horaFim" [timeOnly]="true" [stepMinute]="5" inputId="horarioFim"
+            [defaultDate]="horaPadrao">
+        </p-calendar>
+    </div>
+
+
+</div>
+
+<div class="p-col-12 p-grid">
+
+    <div class="p-md-2 p-fluid sm-top-margin" [formGroup]="cadastroGrade">
+        Nº de horários
+        <span class="md-inputfield p-float-label">
+            <input type="number" [min]="1" formControlName="numeroDeHorarios" pInputText>
         </span>
     </div>
-    
+
     <div class="p-md-2 p-col-12" [formGroup]="cadastroGrade">
         <label for="situacao">Situação</label>
         <span class="md-inputfield p-float-label" style="margin-top: 5px;">
 
-            <p-dropdown [options]="" formControlName="ativo"[showClear]="true"
-            [options]="situacaoGrade" placeholder="Selecione"></p-dropdown>
+            <p-dropdown [options]="" formControlName="ativo" [showClear]="true" [options]="situacaoGrade"
+                placeholder="Selecione"></p-dropdown>
+        </span>
+    </div>
+
+    <div class="p-md-2 p-fluid">
+        Unidade executora
+        <span class="md-inputfield p-float-label" style="margin-top: 5px;">
+            <p-dropdown [options]="unidadesExecutoras" [optionLabel]="'nome'" [optionValue]="'id'" [filter]="true"
+                [resetFilterOnHide]="true" [showClear]="true" placeholder="Selecione"
+                [(ngModel)]="unidadeSelecionada" (onChange)="listarSalas()">
+            </p-dropdown>
         </span>
     </div>
 
     <div class="p-md-2 p-fluid" [formGroup]="cadastroGrade">
         Identificação da sala
         <span class="md-inputfield p-float-label" style="margin-top: 5px;">
-            <p-dropdown [options]="salas" [optionLabel]="'identificacaoDaSala'" [optionValue]="'id'" [filter]="true"
-                [resetFilterOnHide]="true" [showClear]="true" formControlName="salaGradeId"
-                placeholder="Selecione">
+            <p-dropdown [options]="salas" [optionLabel]="'nome'" [optionValue]="'id'" [filter]="true"
+                [resetFilterOnHide]="true" [showClear]="true" formControlName="salaId" placeholder="Selecione"
+                [disabled]="unidadeSelecionada==null">
             </p-dropdown>
         </span>
     </div>
+
 </div>
 
-<div class="p-col-12 p-grid">
 
-    <div class="p-md-2 p-fluid" [formGroup]="cadastroGrade">
-        Grupo de exames
-        <span class="md-inputfield p-float-label" style="margin-top: 5px;">
-            <p-dropdown [options]="gruposDeExame" [optionLabel]="'nome'" [optionValue]="'id'" [filter]="true"
-                [resetFilterOnHide]="true" [showClear]="true" formControlName="grupoGradeId"
-                placeholder="Selecione">
-            </p-dropdown>
-        </span>
-    </div>
+
+<div class="p-col-12 p-grid">
 
     <div class="p-md-2 p-fluid" [formGroup]="cadastroGrade">
         Exame
         <span class="md-inputfield p-float-label" style="margin-top: 5px;">
             <p-dropdown [options]="exames" [optionLabel]="'nome'" [optionValue]="'id'" [filter]="true"
-                [resetFilterOnHide]="true" [showClear]="true"
-                formControlName="exameGradeId" placeholder="Selecione">
+                [resetFilterOnHide]="true" [showClear]="true" formControlName="exameId" placeholder="Selecione">
             </p-dropdown>
         </span>
     </div>
@@ -56,40 +88,37 @@
         Responsável
         <span class="md-inputfield p-float-label" style="margin-top: 5px;">
             <p-dropdown [options]="servidores" [optionLabel]="'pessoaNome'" [optionValue]="'id'"
-                [resetFilterOnHide]="true" [showClear]="true" [filter]="true"
-                formControlName="responsavelId" placeholder="Selecione">
+                [resetFilterOnHide]="true" [showClear]="true" [filter]="true" formControlName="responsavelId"
+                placeholder="Selecione">
             </p-dropdown>
         </span>
-    </div>           
+    </div>
+
+    <div class="p-md-2 p-fluid">
+        Dia
+        <span class="md-inputfield p-float-label sm-top-margin">
+            <p-dropdown [options]="opcoesDia" [showClear]="true" placeholder="Selecione"
+                [resetFilterOnHide]="true" [(ngModel)]="dia">
+            </p-dropdown>
+        </span>
+    </div>
 </div>
+
 
 
 <div class="p-col-12 p-grid p-d-flex">
 
     <p-confirmDialog acceptLabel="Sim" rejectLabel="Não"></p-confirmDialog>
-    
+
     <div class="p-md-2 p-sm-12">
-        <button
-            icon="pi pi-save"
-            pButton type="button"
-            (click)="cadastrarGradeDeAgendamento()"
-            [disabled]="!validarFormulario()"
-            label="Salvar"
-        ></button>
+        <button icon="pi pi-save" pButton type="button" (click)="cadastrarGradeDeAgendamento()"
+           label="Salvar"></button>
     </div>
 
     <div class="p-md-2 p-sm-12">
-        <button
-            pButton type="button" icon="pi pi-times"
-            label="Limpar" (click)="limparFormulario()"
-        ></button>
+        <button pButton type="button" icon="pi pi-times" label="Limpar" (click)="limparFormulario()"></button>
     </div>
     <div class="p-md-2 p-sm-12">
-        <button
-            pButton
-            type="button"
-            routerLink="/listar-grade-exame"
-            label="Voltar"
-        ></button>
+        <button pButton type="button" routerLink="/listar-grade-exame" label="Voltar"></button>
     </div>
 </div>
