--- a/frontend/src/app/exames/components/grupos-de-recomendacoes-de-exames/grupos-de-recomendacoes-de-exames.component.html
+++ b/frontend/src/app/exames/components/grupos-de-recomendacoes-de-exames/grupos-de-recomendacoes-de-exames.component.html
@@ -7,7 +7,7 @@
                     <div class="p-md-6 p-col-12">
                         <label>Descrição</label>
                         <span class="md-inputfield p-float-label">
-                            <input type="text" pInputText class="p-inputtext" [(ngModel)]="descricaoId"/>
+                            <input type="text" pInputText class="p-inputtext" [(ngModel)]="descricao"/>
                         </span>
                     </div>
                     <div class="p-md-3 p-col-12">
@@ -23,9 +23,12 @@
                         <label>Responsável</label>
                         <span>
                             <p-dropdown formControlName="materialId"
-                                [options]="responsaveis"  
-                                placeholder="Selecione"
-                                [(ngModel)]="responsavelId">
+                                [(ngModel)]="responsavel"
+                                [options]="responsaveis"
+                                [filter]="true"
+                                [resetFilterOnHide]="true"
+                                [showClear]="true"  
+                                placeholder="Selecione">
                             </p-dropdown>
                         </span>
                     </div>
@@ -33,13 +36,12 @@
                         <label>Abrangência</label>
                         <span>
                             <p-dropdown formControlName="materialId" 
-                                [optionLabel]="'nome'"
-                                [optionValue]="'id'" 
-                                [filter]="true" 
-                                [resetFilterOnHide]="true" 
+                                [(ngModel)]="abrangencia"
+                                [options]="abrangencia1"
+                                [filter]="true"
+                                [resetFilterOnHide]="true"
                                 [showClear]="true"
-                                pTooltip="Selecione"
-                                [(ngModel)]="abrangenciaId">
+                                placeholder="Selecione">
                             </p-dropdown>
                         </span>
                     </div>
