Listar horários da grade atual na tabela - BASIS-227321

--- a/frontend/src/app/exames/components/formulario-grade-de-agendamento/formulario-grade-de-agendamento.component.html
+++ b/frontend/src/app/exames/components/formulario-grade-de-agendamento/formulario-grade-de-agendamento.component.html
@@ -34,7 +34,7 @@
 <div class="p-col-12 p-grid">
 
     <div class="p-md-2 p-fluid sm-top-margin" [formGroup]="cadastroGrade">
-        Nº de horários
+        Nº de Horários por dia
         <span class="md-inputfield p-float-label">
             <input type="number" [min]="1" formControlName="numeroDeHorarios" pInputText>
         </span>
