--- a/frontend/src/app/internacao/components/listar-dar-alta-pacientes/listar-dar-alta-pacientes.component.html
+++ b/frontend/src/app/internacao/components/listar-dar-alta-pacientes/listar-dar-alta-pacientes.component.html
@@ -1,22 +1,56 @@
 <div class="card">
     <h1>Lista de PAcientes Internados</h1>
+
+    <div class="p-grid">
+        <div
+            class="p-md-2 p-fluid"
+            pTooltip="Informe a descrição do tipo de unidade funcional"
+        >
+            Prontuário
+            <span class="md-inputfield p-float-label" style="margin-top: 0px">
+                <input type="text" pInputText class="p-inputtext" formControlName="nome" />
+            </span>
+        </div>
+
+            <div
+                class="p-md-4 p-fluid"
+                pTooltip="Informe a descrição do tipo de unidade funcional"
+            >
+                Nome:
+                <span class="md-inputfield p-float-label" style="margin-top: 0px">
+                    <input type="text" pInputText class="p-inputtext" formControlName="nome" />
+                </span>
+            </div>
+    </div>
+
+    <div class="p-col-12 p-grid">
+        <div class="p-md-2">
+            <button
+                pButton
+                type="button"
+                label="Pesquisar"
+                icon="pi pi-search"
+                (click)="lista()"
+                [disabled]="null"
+            ></button>
+        </div>
+
     <div class="p-col-12 p-grid">
        <basis-datatable>
             <p-column header="Data Alta" field="null"></p-column>
             <p-column header="Data Inter" field="null"></p-column>
-            <p-column header="Leito" field="null"></p-column>
+            <p-column header="Leito" field="leitoNome"></p-column>
             <p-column header="Quarto" field="null"></p-column>
-            <p-column header="Unid Funcio" field="null"></p-column>
-            <p-column header="Especialidade" field="null"></p-column>
-            <p-column header="Conv/Plano" field="null"></p-column>
+            <p-column header="Unid Funcio" field="unidadeFuncionalNome"></p-column>
+            <p-column header="Especialidade" field="especialidadeNome"></p-column>
+            <p-column header="Conv/Plano" field="conveniDeSaudeNome"></p-column>
             <p-column header="Professor" field="null"></p-column>
 
             <basis-datatable-button
                 name="acao" bTooltip="acao"
                 icon="pi pi-pencil" class="p-button-info">
             </basis-datatable-button>
-
-
        </basis-datatable>
+
     </div>
 </div>
