Adicionando o frontend do formulario de dar alta

--- a/frontend/src/app/internacao/components/listar-dar-alta-pacientes/listar-dar-alta-pacientes.component.html
+++ b/frontend/src/app/internacao/components/listar-dar-alta-pacientes/listar-dar-alta-pacientes.component.html
@@ -48,7 +48,7 @@
 
             <basis-datatable-button
                 name="acao" bTooltip="acao"
-                icon="pi pi-pencil" class="p-button-info">
+                icon="pi pi-pencil" class="p-button-info" routerLink="formulario-dar-alta-ao-paciente">
             </basis-datatable-button>
        </basis-datatable>
 
