--- a/frontend/src/app/internacao/formulario-dar-alta-ao-paciente/formulario-dar-alta-ao-paciente.component.html
+++ b/frontend/src/app/internacao/formulario-dar-alta-ao-paciente/formulario-dar-alta-ao-paciente.component.html
@@ -1,1 +1,146 @@
-<app-listar-dar-alta-pacientes></app-listar-dar-alta-pacientes>
+<div class="card">
+    <h1>Dados da Alta do Paciente</h1>
+
+    <div class="p-grid">
+        <div
+            class="p-md-2 p-fluid"
+            pTooltip="Informe a descrição do tipo de unidade funcional"
+        >
+            Prontuário
+            <span class="md-inputfield p-float-label" style="margin-top: 0px">
+                <input type="text" pInputText class="p-inputtext" formControlName="nome" />
+            </span>
+        </div>
+
+        <div
+            class="p-md-4 p-fluid"
+            pTooltip="Informe a descrição do tipo de unidade funcional"
+        >
+            Nome:
+            <span class="md-inputfield p-float-label" style="margin-top: 0px">
+                <input type="text" pInputText class="p-inputtext" formControlName="nome" />
+            </span>
+      </div>
+
+    </div>
+
+    <div class="p-grid">
+
+        <div
+            class="p-md-2 p-fluid"
+            pTooltip="Informe a descrição do tipo de alta administrativa"
+
+            >
+            Tipo Alta Admin
+            <span class="md-inputfield p-float-label">
+            <input  type="text" pInputText class="p-inputtext"/>
+            </span>
+
+        </div>
+
+        <div
+            class="p-md-1 p-fluid"
+            pTooltip="Informe a descrição do atestado de óbito"
+            >
+
+            Atestado óbito
+            <span class="md-inputfield p-float-label">
+                <input type="text" pInputText class="p-inputtext"/>
+            </span>
+
+        </div>
+
+    </div>
+
+    <div class="p-grid">
+
+        <div class="p-md-2 p-sm-12" style="margin-top: 15px;">
+
+            <span class="p-float-label">
+                <p-calendar
+                    [locale]="null"
+                    [yearRange]="null"
+                    dateFormat="dd/mm/yy"
+                    showTime="true"
+                    hourFormat="24"
+                    showButtonBar="true"
+                    [yearNavigator]="true"
+                    [monthNavigator]="true"
+                    formControlName="null"
+                ></p-calendar>
+                <label>Data e Hora Alta</label>
+            </span>
+
+        </div>
+
+        <div
+            class="p-md-2 p-fluid" style="margin-right: 50px;"
+            pTooltip="Informe a descrição do tipo"
+            >
+
+            Tipo
+            <span class="md-inputfield p-float-label">
+                <input type="text" pInputText class="p-inputtext"/>
+            </span>
+
+        </div>
+
+        <div class="p-md-2 p-sm-12" style="margin-top: 15px;">
+
+            <span class="p-float-label">
+                <p-calendar
+                    [locale]="null"
+                    [yearRange]="null"
+                    dateFormat="dd/mm/yy"
+                    showTime="true"
+                    hourFormat="24"
+                    showButtonBar="true"
+                    [yearNavigator]="true"
+                    [monthNavigator]="true"
+                    formControlName="null"
+                ></p-calendar>
+                <label>Data e Hora Saida</label>
+            </span>
+
+        </div>
+
+    </div>
+
+    <div class="p-grid">
+
+        <div
+        class="p-md-2 p-fluid"
+        pTooltip="Informe a descrição de transferencia"
+        >
+
+        Transfêrencias
+        <span class="md-inputfield p-float-label">
+            <input type="text" pInputText class="p-inputtext"/>
+        </span>
+
+          </div>
+    </div>
+
+    <div class="p-col-12 p-grid" style="margin-bottom: 10px;">
+
+        <div class="p-md-2 p-sm-12">
+            <button
+                pButton
+                type="button"
+                label="Registrar Alta"
+                icon="pi pi-save"
+                (click)="null"
+            ></button>
+        </div>
+
+        <div class="p-md-2 p-sm-12">
+            <button
+                pButton
+                type="button"
+                label="Limpar"
+                icon="pi pi-"
+                (click)="null"
+            ></button>
+        </div>
+    </div>
+</div>
