Correção combo de municipios com busca do municipio atraves do elasticsearch - BASIS-230101

--- a/frontend/src/app/pacientes/formulario/endereco/paciente-form-endereco.component.html
+++ b/frontend/src/app/pacientes/formulario/endereco/paciente-form-endereco.component.html
@@ -24,7 +24,9 @@
                     field="nome"
                     [suggestions]="municipios"
                     [dropdown]="true"
-                    formControlName="municipioId"></p-autoComplete>
+                    autocomplete="disabled"
+                    formControlName="municipioId">
+                </p-autoComplete>
                 <label>Municípios</label>
             </span>
         </div>
